--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,6 @@ input[type="submit"] {
   border-bottom: 1px solid #e1e8ed;
   clear: both;
   list-style: none;
-  min-height: 75px
+  min-height: 75px;
   position: relative;
 }
