--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ h1 {
   font-size: 14px;
   line-height: 18px;
   margin-top: 1em;
+  margin-bottom: 2em;
   padding: 0;
 }
 
@@ -65,7 +66,7 @@ input[type="submit"] {
   background: url("../images/verified.png");
   background-size: cover;
   vertical-align: middle;
-  margin-top: -3px;
+  margin-top: -2px;
 }
 
 .username:hover {
