--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ h1 {
 
 #publisher {
   background: #E8F4FB;
+  position: relative;
 }
 
 #timeline {
@@ -37,6 +38,13 @@ input[type="submit"] {
   padding: 14px;
   border-radius: 5px;
   -moz-border-radius: 5px;
+}
+
+input[name="email"] {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -2;
 }
 
 .avi {
