click on avi to view faketweets by that person

--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,11 @@ input[name="email"] {
   position: absolute;
   top: 12px;
   left: 12px;
+  cursor: pointer;
+}
+
+.avi:hover {
+  opacity: .9;
 }
 
 .username {
