--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,11 @@ h1, h2 {
   padding: 0;
 }
 
+#timeline li:hover {
+  background: #f5f8fa; 
+  cursor: pointer;
+}
+
 input[name="tweet"] {
   width: 100%;
   border-radius: 5px;
